try with more models

--- a/Machine Learning Models/linear_svm_try.ipynb
+++ b/Machine Learning Models/linear_svm_try.ipynb
@@ -679,6 +679,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "cd68cdc9",
+   "metadata": {},
+   "source": [
+    "LINEAR SVM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "48ea2f13",
@@ -778,6 +787,15 @@
     "\n",
     "print(\"\\nLinearSVM with N-Gram Vectors: \")\n",
     "classifierModel(SVC(kernel='linear', probability=True), X_train_tfidf_ngram, y_train, X_test_tfidf_ngram,roc=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "598a7bd7",
+   "metadata": {},
+   "source": [
+    "NAIVE BAYES"
    ]
   },
   {
@@ -883,6 +901,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a853eecd",
+   "metadata": {},
+   "source": [
+    "RANDOM FOREST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "ced43645",
@@ -982,6 +1009,15 @@
     "\n",
     "print(\"\\nRandom Forrest Classifier with N-Gram Vectors: \")\n",
     "classifierModel(RandomForestClassifier(random_state=rstate,n_estimators=512), X_train_tfidf_ngram, y_train, X_test_tfidf_ngram,roc=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "05e8451d",
+   "metadata": {},
+   "source": [
+    "LOGISTIC REGRESSION"
    ]
   },
   {
