--- a/Machine Learning Models/Deep learning-Sequential-Model.ipynb
+++ b/Machine Learning Models/Deep learning-Sequential-Model.ipynb
@@ -421,6 +421,19 @@
     "print(\"Test Loss:\", loss)\n",
     "print(\"Test Accuracy:\", accuracy*100.0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Saving the model\n",
+    "model_json=model.to_json()\n",
+    "with open(\"bangla-sequential-model.json\",\"w\")as json_file:\n",
+    "    json_file.write(model_json)\n",
+    "model.save_weights(\"bangla-sequential-model_wieghts.h5\")"
+   ]
   }
  ],
  "metadata": {
