--- a/Machine Learning Models/Deep learning-Sequential-Model.ipynb
+++ b/Machine Learning Models/Deep learning-Sequential-Model.ipynb
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text=\"পাপন শালা রে রিমান্ডে নেওয়া দরকার\"\n",
+    "text=\"আমি ভালো আছি বেশ\"\n",
     "text=remove_punctuation_from_sentence(text)\n",
     "text=remove_stopwords(text=text,stopwords=stopwords)"
    ]
